# Naimuri-coding-assessment

./: README  Readme  Technical_Challenge_Answer.ipynb  pyproject.toml  requirements.txt
config/: regions.json  standard_countries.json
example_deployment/: Dockerfile  README.md  pyproject.toml
example_deployment/model/: lstm_covid_model.h5  scaler.pkl
example_deployment/src/lstm_covid_model/: app.py
models/: garch_lstm_covid_model.h5  lstm_covid_model.h5
