[project]
name = "naimuri-coding-assessment"
version = "0.1.0"
description = "COVID-19 modelling and forecasting task solution."
authors = [
    {name = "TavneetKB",email = "tavbahia@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "sklearn (>=0.0.post12,<0.1)",
    "arch (>=8.0.0,<9.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
